# memApp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/chatmodes/: prompt.chatmode.md
docs/: CHANGELOG.md  PROJECT_MEMORY.md
docs/adr/: ADR-20250808-structure-initiale.md  README.md
memApp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: setup_dev.sh
src/config/: config_full.yml  defaults_globale.json  schemas_globale.json
src/config/logger/: config.yml
src/config/logs/: config.yml  defaults.yml  schema.yml
src/config/memApp/: config.yml  defaults.yml  schema.yml
src/config/watchdog/: config.yml  defaults.yml  schema.yml
src/core/: config_manager.py  config_merge.py  config_reload.py  config_validation.py  defaults.py  event_manager.py  exceptions.py  schemas.py  templates.py
src/core/config_manager/: __init__.py  manager.py  merge.py  reload.py  validation.py
src/core/event_manager/: manager.py
src/core/exceptions/: __init__.py  base.py  config.py  core.py  plugin.py  utils.py  watchdog.py
src/utils/: file_tools.py  yaml_tools.py
