[project]
name = "memApp"
description = "Application modulaire pour la gestion de mémoire et d’installation automatique."
version = "0.1.0"
authors = [
    { name = "Memnoch9178" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "flask>=2.0",
    "cerberus>=1.3",
    "watchdog>=2.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0"
]

[tool.setuptools]
packages = ["src", "src.core", "src.core.config_manager", "src.core.exceptions", "src.utils"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=4.0",
    "black>=22.0",
    "mypy>=1.0",
    "coverage>=7.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", "docs", "*.md", "*.yml"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]
